updated content of labs

--- a/slides/week_1_intro.tex
+++ b/slides/week_1_intro.tex
@@ -221,9 +221,7 @@
       \textbf{Lab (1.5h)}
       \begin{itemize}
         \item Tokenize and embed real text
-        \item Inspect attention weights with HuggingFace
-        \item Call OpenAI GPT models and estimate cost
-        \item Bonus: visualize attention with BERTviz
+        \item Inspect different tokenizations and embeddings
       \end{itemize}
     \end{column}
   \end{columns}
