--- a/slides/week_1_intro.tex
+++ b/slides/week_1_intro.tex
@@ -1091,7 +1091,7 @@ print(resp.choices[0].message.content)
     \midrule
     LLM overview & \href{https://learn.deeplearning.ai/courses/how-transformer-llms-work}{How Transformer LLMs Work (deeplearning.ai)} — concise intro to components. \\
     Transformer basics & \href{https://jalammar.github.io/illustrated-transformer/}{The Illustrated Transformer (Jay Alammar)} — visual intuition for attention. \\
-    Tokenization & \href{https://github.com/openai/tiktoken}{OpenAI \texttt{tiktoken}}; \href{https://huggingface.co/docs/tokenizers/index}{HF Tokenizers} — counts, costs, subwords. \\
+    %Tokenization & \href{https://github.com/openai/tiktoken}{OpenAI \texttt{tiktoken}}; \href{https://huggingface.co/docs/tokenizers/index}{HF Tokenizers} — counts, costs, subwords. \\
     Attention math & \href{https://arxiv.org/abs/1706.03762}{Attention Is All You Need (Vaswani et al., 2017)} — original paper. \\
     %Scaling laws & \href{https://arxiv.org/abs/2005.14165}{GPT-3 (Brown et al., 2020)}; \href{https://arxiv.org/abs/2203.15556}{Chinchilla (Hoffmann et al., 2022)} — compute/data trade-offs. \\
     APIs (OpenAI) & \href{https://platform.openai.com/docs}{OpenAI Platform Docs} — endpoints, auth, safety. \\
